--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -121,7 +121,8 @@ width:70px;height:70px;vertical-align: baseline!important;
 	
 }{
 	@Templates.pagemaincontent(){	
-	
+	<!-- beg browse discover -->
+	@*
 	<div class="container main-categories">
          <div class="row">
             <div class="col-lg-12 col-xs-12 col-sm-12 col-md-12 col-12">
@@ -298,8 +299,8 @@ width:70px;height:70px;vertical-align: baseline!important;
          <!-- End .row -->
       </div>
       <!-- /.container -->
-      
-      
+      *@
+      <!-- end of browse discover -->
       <div class="section-title">
          <div class="container">
             <div class="row">
