--- a/app/views/Templates/pageheader.scala.html
+++ b/app/views/Templates/pageheader.scala.html
@@ -17,7 +17,7 @@
       <span class="icon-bar"></span>
     </button>
     <div>	
-     <a class="navbar-brand dropdown-toggle" data-toggle="dropdown" href="@routes.Application.home()" data-target="#"><img src="@routes.Assets.at("bl/images/logo.png")"   alt="Boozology"><b class="caret"></b></a>
+     <a class="navbar-brand dropdown-toggle" data-toggle="dropdown" href="@routes.Application.home()" data-target="#"><img src="https://s3-us-west-2.amazonaws.com/com.gold.byrepo08/assets/logo.png"   alt="Boozology"><b class="caret"></b></a>
      <ul class="dropdown-menu">
      	<li><a href="@routes.Application.home()"><i class="icon-home"></i>Home</a></li>
         <li><a href="@routes.SPages.aboutus()">About Us</a></li>
