--- a/app/views/Templates/su/pbko.scala.html
+++ b/app/views/Templates/su/pbko.scala.html
@@ -30,7 +30,7 @@
       
       <!-- End .info-wrap -->
        <!-- <div class="product-image" data-bind="style: { backgroundImage: 'url(\'' + pic() + '\')'}"></div> -->
-       <img data-bind="attr:{src:pic()}" class="product-image img-responsive"/> 
+       <img data-bind="attr:{src:pic()}" class="product-image img-responsive thumbnail"/> 
       <div class="desc_prod_custom">
         <a data-bind="attr:{href:prlink},text:(name().length > 20 ? name().substring(0, 20) + '..' : name)"></a>
         <br>
