--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -90,7 +90,7 @@ width:70px;height:70px;vertical-align: baseline!important;
 			     	<a href="@S3File.findWallPaperURL(cnt+1).get(0).filename" class="btn @S3File.findWallPaperButton(cnt+1).get(0).filename" style="border-radius:0px; -webkit-border-radius:0px; -moz-border-radius:0px;">@S3File.findWallPaperURL(cnt+1).get(0).filestate</a>
 			     </div>		
 			    
-			      <img alt="Welcome to boozology"  src="@wallpaper.getUrl()"  >
+			      <img alt="Welcome to boozology"  src="@wallpaper.getUrl()" class="img-responsive"  >
  					
 			    
 			    </div>
