image crop profile

--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -53,7 +53,7 @@
 		               <p class="meta pull-left">   
 		               	<a href="@routes.Application.ContributorPage(blg.author.id)">    
 		                  		@*<img src="@routes.Assets.at("images/1.jpg")" class="user-thumb img-responsive" alt="@blg.author.user.name" title="@blg.author.user.name" style="width: 70px;height: 70px;"/>*@
-		                  		 <img src="@blg.author.user.getusersimagesmall()" class="user-thumb img-responsive" alt="@blg.author.user.name" title="@blg.author.user.name" style="width: 70px;height: 70px;"> 
+		                  		 <img src="@blg.author.user.getusersimage()" class="img-responsive img-circle" alt="@blg.author.user.name" title="@blg.author.user.name" style="width: 150px; border:1px solid #d4d4d4" > 
 		                  	</a>
 		                </p>
 		                
