--- a/app/views/Tools/addprofileimage.scala.html
+++ b/app/views/Tools/addprofileimage.scala.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta charset="UTF-8">
-    <title>Add Options</title>
+    <title>Add Image</title>
     <meta content="" name="keywords" />
     <meta content="" name="description" />
     <link rel="stylesheet" href="@routes.Assets.at("bl/css/bootstrap.css")">  
@@ -27,30 +27,22 @@
 	@Templates.AlertMessages()	
 }{
 	<body>	
+	<div class="container">
 		<div class="addbuttondiv">
 				  
-		  	<button type="button" class="btn btn-lg btn-danger brectangle addbuttonsnature btnupload" data-toggle="collapse" data-target="#addfromweb">
-				Add from the Web
-			</button>
-			<div id="addfromweb" class="collapse"> 
-				<form class="form-inline text-center" action="@routes.Useract.addoptionsfromweb()" method="get">
-					<input type="text" name="weburl" class="form-control" placeholder="Enter URL">
-					<div class="clearfix padding-small"></div>
-					<button type="submit" class="btn btn-default">Submit URL or Image URL</button>
-				</form>		
-			</div>
+		  
 			<button type="button" class="btn btn-lg btn-success brectangle addbuttonsnature btnupload" data-toggle="collapse" data-target="#uploadprod">
 				Upload
 			</button>
 			<div id="uploadprod" class="collapse"> 
 			
-			@helper.form(action = routes.Useract.addoptionsbyupload(), 'enctype -> "multipart/form-data",'class->"form-horizontal") {    
+			@helper.form(action = routes.Application.setprofileimage(), 'enctype -> "multipart/form-data",'class->"form-horizontal") {    
 		    
 				<div class="form-group text-center">  
 					<label class="control-label"  for="upload_input">Upload Image:</label>					
 					<input type="file" id="upload_input" name="picture" class="pull-right"  onchange="readName(this);"> 
 					<div class="clearfix padding-small"></div>                       
-					<input type="submit" value="Upload" class="btn btn-default">
+					<input type="submit" value="Upload" class="btn btn-primary" disabled>
 					<div class="clearfix padding-small"></div>					    
 					<span class="btn-sm">Size Limit: <b>2 MB</b></span><br/>
 					<div class="clearfix padding-small"></div>
@@ -59,22 +51,27 @@
 			}
 			
 			</div>
-			<button  type="button" class="btn btn-lg btn-info brectangle addbuttonsnature btnupload" data-toggle="collapse" data-target="#draggb">
-				Drag Grabber Button
-			</button>
-			<div id="draggb" class="collapse"> 
-				<div class="onnextline text-center">
-					<h3>Drag this Button to favorite bar </h3>	<a class="btn btn-lg btn-danger brectangle" href="@Tools.Grabber()">Grabber</a>		
-				</div>
-			</div>
+			
 					  
 		  </div>
 			
 			<script>
+			
+			jQuery.fn.extend({
+			    disable: function(state) {
+			        return this.each(function() {
+			            this.disabled = state;
+			        });
+			    }
+			});
+			
 					document.getElementById('upload_input').onchange = function () {
 						var textp=document.getElementById('fileinformation');
-						textp.innerHTML='Selected file: ' + (function(x){if(x.length>1){return x}else{ return 'None !!';}})(this.value);
+						//textp.innerHTML='Selected file: ' + (function(x){if(x.length>1){return x}else{ return 'None !!';}})(this.value);
 						if(this.value.length > 0) {textp.style.display = 'block';}
+						
+						$('input[type="submit"]').disable(false);
+						$('input[type="button"], button').disable(true);
 					};
 					
 					if(@(flash.contains(Application.EMAIL_VERIFICATION_FAIL))) {
@@ -101,6 +98,7 @@
 		    	resizecbx();
 		  
 		  }  		
+		 </div> <!-- end of container --> 
 	</body>
 }{ 
 }
