--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -63,7 +63,7 @@
                 	<a href="@routes.Application.ContributorPage(blg.author.id)">                  
 		               <p>   
 		                  		
-		                  		<div class="pull-right"> <h4>@blg.author.user.name</h4></div>
+		                  		<div class="pull-right"> <h4>@blg.author.user.firstName @blg.author.user.lastName</h4></div>
 		                </p>
 		            </a>
 		            <div class="clearfix">
