--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -48,7 +48,7 @@
                 <li>
                 	<a href="@routes.Application.ContributorPage(blg.author.id)">                  
 		               <p>   
-		                  <div class="pull-right"> <h4>@blg.author.user.name</h4></div>
+		                  <div class="pull-right"> <h4>@blg.author.user.firstName @blg.author.user.lastName</h4></div>
 		                </p>
 		            </a>
 		            <div class="clearfix">
